change inline to flex

--- a/m1/src/css/style.css
+++ b/m1/src/css/style.css
@@ -149,12 +149,11 @@ h2.title{
 
 .waiting .waiting_wrapper{
     margin-top: 45px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .waiting .waiting_wrapper .waiting_item{
-    display: inline-block;
-    vertical-align: top;
-    margin: 0 15px;
     width: 339px;
     text-align: center;
 }
@@ -171,3 +170,4 @@ h2.title{
     font-weight: 300;
     line-height: 21px;
 }
+
