--- a/uber/src/css/style.css
+++ b/uber/src/css/style.css
@@ -183,3 +183,17 @@ nav {
 .reasons .reasons_block .reasons_desc {
     width: 343px;
 }
+
+.reasons .reasons_block .reasons_desc .reasons_subtitle{
+    line-height: 21px;
+    color: #1eacc7;
+    font-size: 17px;
+    font-weight: 400;
+}
+
+.reasons .reasons_block .reasons_desc .reasons_text {
+    color: #202020;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 21px;
+}
