--- a/uber/sass_intro/sass/style.sass
+++ b/uber/sass_intro/sass/style.sass
@@ -1,5 +1,16 @@
+$text_color: red
+@mixin box
+    display: block
+    width: 250px
+    height: 200px
+    background-color: red
+
+=box2
+    font-family: Roboto
+    color: green
+
 h1
-    color: red
+    color: $text_color
     font-size: 50px
 
 h2
@@ -12,6 +23,8 @@ h2
     &_color
         background-color: #fff
         button
-            width: 250px
+            @include box
+    .block_color
+        +box2
 
 
