--- a/glozzom/css/style.css
+++ b/glozzom/css/style.css
@@ -63,6 +63,20 @@ body{
     color: white;
 }
 
+#page-header{
+    height: 200px;
+    background: url('../img/image1.jpg');
+    background-position: 0 -360px;
+    background-attachment: fixed;
+    color: white;
+    border-bottom: 1px #eee solid;
+    padding-top: 50px;
+}
+
 #video-play a{
     color: #fff;
+}
+
+.about-img{
+    margin-top: -50px;
 }
