--- a/uber/src/css/style.css
+++ b/uber/src/css/style.css
@@ -2,13 +2,16 @@
     font-family: 'Roboto', sans-serif;
 }
 
-header{
+header {
     position: relative;
+    height: 50px; /* * */
 }
-
 nav {
+    position: fixed; /* * */
+    width: 100%; /* * */
     height: 50px;
     background-color: #212121;
+    z-index: 2; /* * */
 }
 
 .menu {
@@ -32,9 +35,10 @@ nav {
 
 .subheader {
     position: absolute;
+    top: 50px; /* * */
     width: 100%;
     height: 84px;
-    background-color: rgba(0, 0, 0, .6);
+    background-color: rgba(0,0,0, .6);
 }
 
 .subheader .subheader_logo {
