--- a/uber/src/sass/style.sass
+++ b/uber/src/sass/style.sass
@@ -147,6 +147,7 @@ nav
   font-size: 11px
   font-weight: 300
   text-transform: uppercase
+  text-align: center
 
 .title
   margin-bottom: 0
@@ -156,6 +157,14 @@ nav
   font-weight: 700
   text-transform: uppercase
   text-align: center
+
+.subtitle
+  margin-top: 19px
+  color: #222222
+  font-size: 17px
+  font-weight: 400
+  text-align: center
+
 
 .reasons .reasons_block
   display: flex
@@ -187,3 +196,52 @@ nav
       font-size: 15px
       font-weight: 300
       line-height: 21px
+
+.mobile
+  min-height: 864px
+  padding: 48px 0 79px 0
+  background: url('../img/mobile_app.png') center (center / cover) no-repeat
+  .row
+    margin-top: 32px
+  &_item
+    position: relative
+    width: 320px
+    height: 280px
+    margin: 0 auto
+    margin-bottom: 19px
+    padding-top: 92px
+    &_1
+      background: url('../img/mobile_screen_1.jpg') center (center / cover) no-repeat
+    &_2
+      background: url('../img/mobile_screen_2.jpg') center (center / cover) no-repeat
+    &_3
+      background: url('../img/mobile_screen_3.jpg') center (center / cover) no-repeat
+    &_4
+      background: url('../img/mobile_screen_4.jpg') center (center / cover) no-repeat
+    &_5
+      background: url('../img/mobile_screen_5.jpg') center (center / cover) no-repeat
+    &_6
+      background: url('../img/mobile_screen_6.jpg') center (center / cover) no-repeat
+    &_subtitle
+      color: #ffffff
+      font-size: 24px
+      font-width: 400
+      line-height: 31px
+      text-transform: uppercase
+      text-align: center
+    &_plus
+      display: flex
+      justify-content: center
+      align-items: center
+      position: absolute
+      bottom: 35px
+      left: 50%
+      transform: translateX(-50%)
+      width: 26px
+      height: 26px
+      background-color: #000000
+      margin: 0 auto
+      border-radius: 100%
+      padding: 6px
+      cursor: pointer
+      
