--- a/uber/src/sass/style.sass
+++ b/uber/src/sass/style.sass
@@ -1,5 +1,10 @@
 $main-color: #1eacc7
 $second-color: #ff5656
+
+=btn_hover
+	&:hover
+		background-image: none
+		background-color: $main-color
 	
 *
 	font-family: 'Roboto', sans-serif
@@ -73,6 +78,7 @@ nav
 		font-size: 14px
 		font-weight: 400
 		text-transform: uppercase
+		+btn_hover
 
 .promo
 	min-height: 800px
@@ -116,6 +122,7 @@ nav
 		font-size: 18px
 		font-weight: 400
 		text-transform: uppercase
+		+btn_hover
 
 .reasons
 	padding: 71px 0 65px 0
@@ -235,6 +242,27 @@ nav
 			margin: 0 auto
 			border-radius: 100%
 			cursor: pointer
+			&:before
+				content: ''
+				display: block
+				width: 14px
+				height: 2px
+				background-color: $main-color
+				transition: 0.3s all
+			&:after
+				content: ''
+				position: absolute
+				left: 50%
+				transform: translateX(-50%)
+				display: block
+				width: 2px
+				height: 14px
+				background-color: $main-color
+				transition: 0.3s all
+			&:hover
+				&:before, &:after
+					background-color: $second-color
+			
 
 .choice 
 	position: relative
