--- a/uber/src/sass/_general.sass
+++ b/uber/src/sass/_general.sass
@@ -10,6 +10,9 @@ nav
     background-color: #212121
     z-index: 5
 
+.hamburger
+    display: none
+
 .menu
     display: flex
     justify-content: space-between
@@ -71,6 +74,8 @@ nav
         font-weight: 400
         text-transform: uppercase
         +btn_hover
+
+
 
 .promo
     min-height: 800px
@@ -411,3 +416,6 @@ footer
             margin-top: 19px
             text-transform: uppercase
             text-align: center
+
+.xs-visible
+    display: none
